fix: technical skills cards overflow caused by height

--- a/components/SkillsSection/skillsSection.module.css
+++ b/components/SkillsSection/skillsSection.module.css
@@ -14,6 +14,7 @@
   .skillCardsContainer {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     gap: 1rem;
     margin: 2rem auto;
   }
